fix: Options in WDS radio group widget get distorted in a Section with > 1 Zone (#31797)
Fixes #29365

--- a/app/client/packages/design-system/widgets/src/styles/src/field.module.css
+++ b/app/client/packages/design-system/widgets/src/styles/src/field.module.css
@@ -64,6 +64,7 @@
   & [data-field-group] {
     gap: var(--inner-spacing-2);
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
   }
 
